--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -2131,7 +2131,7 @@ input:not(input:-webkit-autofill)::-webkit-contacts-auto-fill-button {
   }
 }
 
-.space--between {
-  display: flex;
-  justify-content: space-between;
+audio,
+video {
+  background-color: black;
 }
