Fix channel title height in sidebar

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -305,6 +305,10 @@
   flex-direction: column;
   align-items: flex-start;
   list-style: none;
+
+  .claim-preview__title {
+    height: 13px;
+  }
 }
 
 .navigation-inner-container {
