Fix mini player height during autoplay count down

--- a/ui/scss/component/_content.scss
+++ b/ui/scss/component/_content.scss
@@ -82,6 +82,10 @@
       opacity: 0;
     }
 
+    .file-viewer__overlay {
+      padding: unset;
+    }
+
     .content__wrapper--floating {
       width: 100%;
       height: 100%;
