fix spinner for embedded videos (#1979)

--- a/ui/component/viewers/videoViewer/internal/plugins/videojs-mobile-ui/plugin.scss
+++ b/ui/component/viewers/videoViewer/internal/plugins/videojs-mobile-ui/plugin.scss
@@ -16,7 +16,7 @@
   .vjs-touch-overlay {
     max-height: 100% !important;
   }
-  div {
+  div:not(.vjs-loading-spinner) {
     border-radius: unset;
   }
 }
