--- a/ui/component/channelSections/SectionList/style.scss
+++ b/ui/component/channelSections/SectionList/style.scss
@@ -1,4 +1,31 @@
 .channel_sections {
+  .channel-section-card__item {
+    &:hover {
+      .claim-preview__title {
+        color: var(--color-text);
+      }
+    }
+  }
+  .channel-thumbnail {
+    margin-bottom: var(--spacing-xxxs);
+  }
+  .channel-section-card__menu {
+    padding: unset;
+    .menu__button {
+      transform: rotate(0deg);
+      transition: transform 0.4s;
+
+      &[aria-expanded='true'] {
+        opacity: 1;
+        background-color: var(--color-header-button);
+        border-radius: 50%;
+        transform: rotate(90deg);
+        .icon {
+          stroke: var(--color-primary);
+        }
+      }
+    }
+  }
 }
 
 .channel_sections--disabled {
@@ -20,7 +47,4 @@
   svg {
     cursor: pointer;
   }
-}
-
-.channel_sections__list {
 }
