feat: claimSupport button green for creators that can receive payments

--- a/ui/scss/component/_claim_support_button.scss
+++ b/ui/scss/component/_claim_support_button.scss
@@ -6,3 +6,12 @@
     // margin-top: 4px;
   }
 }
+
+.approved-bank-account__button {
+  span,
+  svg {
+    color: var(--color-support-button);
+    stroke: var(--color-support-button) !important;
+    filter: brightness(0.85);
+  }
+}
