--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -135,6 +135,7 @@
   --color-spinner-light: white;
   --color-spinner-dark: #212529;
   --color-login-graphic-background: var(--color-background);
+  --color-support-button: #64f064;
 
   // Editor
   --color-editor-cursor: var(--color-text);
