--- a/ui/scss/themes/light.scss
+++ b/ui/scss/themes/light.scss
@@ -160,6 +160,7 @@
   --color-follow-icon: #e2495e;
   --color-view-bg: var(--color-header-background);
   --color-view-icon: #33c435;
+  --color-support-button: #3eae5c;
 
   // Editor
   --color-editor-cursor: var(--color-text);
