Adjust title label height on followed channels page

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -727,6 +727,10 @@ img {
   column-count: 2;
   column-gap: var(--spacing-m);
 
+  .claim-preview__title {
+    height: 20px;
+  }
+
   @media (min-width: $breakpoint-small) {
     .navigation-link {
       &.navigation-link--with-thumbnail .button__content {
