Remove margin from pdf preview

--- a/ui/scss/component/_file-price.scss
+++ b/ui/scss/component/_file-price.scss
@@ -10,6 +10,7 @@
   .icon--Key {
     position: relative;
     margin-left: var(--spacing-m);
+    margin-right: var(--spacing-m);
     white-space: nowrap;
     color: var(--color-primary-contrast);
   }
