--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -52,7 +52,7 @@
 
   .file-page__video-container + .card,
   .file-render + .card,
-  .content__cover + .card,
+  // .content__cover + .card,
   .card + .file-render,
   .card + .file-page__video-container,
   .card + .content__cover {
