Update purchased key label

--- a/ui/scss/component/_file-price.scss
+++ b/ui/scss/component/_file-price.scss
@@ -14,6 +14,10 @@
     color: var(--color-primary-contrast);
   }
 
+  .icon--Key {
+    margin-right: var(--spacing-m);
+  }
+
   &::before {
     position: absolute;
     content: '';
