--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -51,7 +51,7 @@
   }
 
   .file-page__video-container + .card,
-  .file-render + .card,
+  // .file-render + .card,
   // .content__cover + .card,
   .card + .file-render,
   .card + .file-page__video-container,
